--- a/Module 1/Introduction to Python/IOD_Lab01.ipynb
+++ b/Module 1/Introduction to Python/IOD_Lab01.ipynb
@@ -57,15 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "id": "NaRcNY1l2LbD",
+    "id": "lyMlOgoUZ2R4",
     "tags": []
    },
    "outputs": [],
    "source": [
     "# create a list of 10 students (use just first name)\n",
-    "students = ['alice','ben','cathy','dawn','emily','fern','emma','sean','felix','hugh']"
+    "students = ['alice','ben','cathy','dawn','emily','fern','emma','sean','felix','hugh']\n",
+    "\n",
+    "# Print the list\n",
+    "print(students)"
    ]
   },
   {
@@ -75,37 +78,7 @@
     "id": "lyMlOgoUZ2R4",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['alice', 'ben', 'cathy', 'dawn', 'emily', 'fern', 'emma', 'sean', 'felix', 'hugh']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Print the list\n",
-    "print(students)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "LtbLA_T811kr",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (527877018.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    for students:\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print the list of students in the following format\n",
     "# Index 01 \t Alice\n",
