--- a/Module  2/Lab 2/IOD_Lab 2.2.1a DEMO - Data Wrangling.ipynb
+++ b/Module  2/Lab 2/IOD_Lab 2.2.1a DEMO - Data Wrangling.ipynb
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "# import pandas as pd\n",
-    "# import io\n",
+    "# import \n",
     " \n",
     "# titanic = pd.read_csv(io.BytesIO(uploaded['titanic.csv']))\n",
     "# titanic.head()"
@@ -7933,7 +7933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
