--- a/Module 1/Introduction to Python/IOD_Lab4-Optional.ipynb
+++ b/Module 1/Introduction to Python/IOD_Lab4-Optional.ipynb
@@ -41,16 +41,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "id": "-7uQ5sdfCrrv",
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
