--- a/Module 1/Introduction to Python/IOD_Lab01.ipynb
+++ b/Module 1/Introduction to Python/IOD_Lab01.ipynb
@@ -57,12 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "lyMlOgoUZ2R4",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alice', 'ben', 'cathy', 'dawn', 'emily', 'fern', 'emma', 'sean', 'felix', 'hugh']\n"
+     ]
+    }
+   ],
    "source": [
     "# create a list of 10 students (use just first name)\n",
     "students = ['alice','ben','cathy','dawn','emily','fern','emma','sean','felix','hugh']\n",
@@ -94,7 +102,8 @@
     "# Index 02 \t Bob\n",
     "# Index 03 \t Pradeep\n",
     "for students\n",
-    "    print(f'1:4')"
+    "    print(f'1:4')\n",
+    "    "
    ]
   },
   {
