--- a/Module 4/lab 4/IOD_Lab 4.1.1.ipynb
+++ b/Module 4/lab 4/IOD_Lab 4.1.1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "id": "hejYh49cXd3n",
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "id": "C8BX-oTKXd3s",
     "tags": []
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -565,7 +565,7 @@
        "array(['Residential', 'Condo', 'Multi-Family', 'Unkown'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -645,7 +645,7 @@
        "757  Unkown  Fri May 16 00:00:00 EDT 2008  275000  38.64347 -120.888183  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -680,7 +680,7 @@
        "array(['Residential', 'Condo', 'Multi-Family', 'Unknown'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -803,7 +803,7 @@
        "Unknown       275000.0  275000.0  275000.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -924,7 +924,7 @@
        "Residential   218500.0  305000.0  884790.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -958,7 +958,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -1111,7 +1111,7 @@
        "max     39.020808 -120.597599  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -1301,11 +1301,54 @@
    },
    "outputs": [],
    "source": [
-    "# ANSWER\n",
-    "\n",
-    "coef of number or bedsand baths .\n",
-    "or sq_ft size."
+    "# ANSWER : beds baths type and sqft"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Y= df['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "X = df['beds']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def draw_scatter_plt(X,Y):\n",
+    "    fig = plt.figure(figssixe=(15,7))\n",
+    "    \n",
+    "    ax=plt.gca()\n",
+    "    ax.scatter(X,Y, c='b')\n",
+    "    \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1652,6 +1695,37 @@
    "outputs": [],
    "source": [
     "# ANSWER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: seaborn in c:\\users\\sharo\\anaconda3\\lib\\site-packages (0.12.2)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.17 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from seaborn) (1.24.3)\n",
+      "Requirement already satisfied: pandas>=0.25 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from seaborn) (2.0.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from seaborn) (3.7.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (4.25.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (9.4.0)\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.1->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from pandas>=0.25->seaborn) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from pandas>=0.25->seaborn) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\sharo\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.1->seaborn) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install seaborn"
    ]
   },
   {
