--- a/Notes/basic operation .ipynb
+++ b/Notes/basic operation .ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53495b45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e9ca7198-8e23-45ec-a53a-a8df6e379379",
    "metadata": {},
@@ -255,6 +263,7 @@
    "execution_count": 20,
    "id": "a97c1eef-c584-4a1f-9303-1f76722ca63b",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -279,9 +288,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44c197ab",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecfeadd5-988c-4958-a167-b31b3b822317",
+   "id": "bfcbf1d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ed7e82",
    "metadata": {},
    "outputs": [],
    "source": []
